-- MVP schema: users, categories, documents, document_extractions, expenses
-- Target: PostgreSQL with BIGINT identity primary keys
-- Source of truth: docs/architecture.md section 6.9

BEGIN;

CREATE TABLE users (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email           VARCHAR(255) NOT NULL,
    password_hash   VARCHAR(255) NOT NULL,
    created_at      TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at      TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT users_email_unique UNIQUE (email)
);

CREATE TABLE categories (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name        VARCHAR(100) NOT NULL,
    slug        VARCHAR(100) NOT NULL,
    is_active   BOOLEAN NOT NULL DEFAULT TRUE,
    created_at  TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT categories_name_unique UNIQUE (name),
    CONSTRAINT categories_slug_unique UNIQUE (slug)
);

CREATE TABLE documents (
    id                  BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id             BIGINT NOT NULL,
    status              VARCHAR(32) NOT NULL,
    storage_path        VARCHAR(500) NOT NULL,
    original_filename   VARCHAR(255) NOT NULL,
    mime_type           VARCHAR(100) NOT NULL,
    file_size_bytes     INTEGER NOT NULL,
    created_at          TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at          TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT documents_user_id_fk
        FOREIGN KEY (user_id) REFERENCES users (id) ON DELETE CASCADE,
    CONSTRAINT documents_status_check
        CHECK (status IN (
            'UPLOADED',
            'PROCESSING',
            'REVIEW_REQUIRED',
            'PROCESSING_FAILED',
            'SAVED'
        )),
    CONSTRAINT documents_file_size_positive
        CHECK (file_size_bytes > 0)
);

CREATE INDEX documents_user_id_status_idx
    ON documents (user_id, status);

CREATE INDEX documents_user_id_created_at_idx
    ON documents (user_id, created_at DESC);

CREATE TABLE document_extractions (
    id                      BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    document_id             BIGINT NOT NULL,
    raw_ocr_text            TEXT,
    proposed_merchant       VARCHAR(255),
    proposed_date           DATE,
    proposed_amount         DECIMAL(12, 2),
    proposed_currency       CHAR(3),
    proposed_category_id    BIGINT,
    created_at              TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at              TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT document_extractions_document_id_fk
        FOREIGN KEY (document_id) REFERENCES documents (id) ON DELETE CASCADE,
    CONSTRAINT document_extractions_document_id_unique
        UNIQUE (document_id),
    CONSTRAINT document_extractions_proposed_category_id_fk
        FOREIGN KEY (proposed_category_id) REFERENCES categories (id) ON DELETE SET NULL,
    CONSTRAINT document_extractions_proposed_currency_check
        CHECK (
            proposed_currency IS NULL
            OR proposed_currency IN ('EUR', 'USD', 'GBP')
        ),
    CONSTRAINT document_extractions_proposed_amount_positive
        CHECK (
            proposed_amount IS NULL
            OR proposed_amount > 0
        )
);

CREATE TABLE expenses (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    document_id     BIGINT NOT NULL,
    category_id     BIGINT NOT NULL,
    merchant        VARCHAR(255),
    expense_date    DATE NOT NULL,
    total_amount    DECIMAL(12, 2) NOT NULL,
    currency        CHAR(3) NOT NULL,
    created_at      TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at      TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT expenses_document_id_fk
        FOREIGN KEY (document_id) REFERENCES documents (id) ON DELETE RESTRICT,
    CONSTRAINT expenses_document_id_unique
        UNIQUE (document_id),
    CONSTRAINT expenses_category_id_fk
        FOREIGN KEY (category_id) REFERENCES categories (id),
    CONSTRAINT expenses_total_amount_positive
        CHECK (total_amount > 0),
    CONSTRAINT expenses_currency_check
        CHECK (currency IN ('EUR', 'USD', 'GBP'))
);

CREATE INDEX expenses_expense_date_idx
    ON expenses (expense_date);

CREATE INDEX expenses_category_id_idx
    ON expenses (category_id);

CREATE INDEX expenses_merchant_idx
    ON expenses (merchant);

COMMIT;
